# zun-rust-server

./: .env.example  .gitignore  ANDROID_TESTING.md  CHANGELOG.md  Cargo.toml  README.md  config.example.toml  justfile  starter_prompts.toml
.github/workflows/: rust.yml
data/: prompts.example.toml  prompts.example.yaml  prompts.yaml  workflows
migrations/: 0001_v2_schema.sql  0002_add_preview_path.sql  0003_single_user_schema.sql  20260422000000_init.sql  20260422000001_add_custom_prompt.sql
plan/: COMMS_OPTIMIZATION.md  NEXT.md  PLAN.md
src/: auth.rs  backup.rs  comfy.rs  comfy_monitor.rs  config.rs  custom_prompts.rs  db.rs  derived_images.rs  error.rs  handlers.rs  hash.rs  images.rs  inputs.rs  lib.rs  logging.rs  main.rs  paths.rs  prompts.rs  purge.rs  state.rs  worker.rs  workflow.rs
tests/: auth.rs  gallery.rs  health.rs  images.rs  jobs.rs  prompts.rs  submit.rs  worker.rs
tests/common/: mod.rs
