[package]
name = "zun-rust-server"
version = "0.1.0"
edition = "2024"
default-run = "zun-rust-server"

[[bin]]
name = "zun-rust-server"
path = "src/main.rs"

[[bin]]
name = "zun-admin"
path = "src/bin/zun_admin.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
rand = "0.10.1"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json", "multipart", "query", "http2", "charset"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
toml = "1.1"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace", "request-id", "sensitive-headers"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6.5"
